# yandex-music-fusefs

./: .gitattributes  .gitignore  .mypy.ini  MANIFEST.in  README.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
contrib/: yamusic-fs.service
tests/: conftest.py  test_music_fs.py  test_tag.py
tests/contrib/: test.flac  test.m4a
yandex_fuse/: main.py  request.py  virt_fs.py  ya_music_fs.py  ya_player.py
