[metadata]
name = yandex-fuse
version = 1.0.0
summary = "Yandex Music Fuse FS"
description-file =
    README.md
author = Roman Nebaluev
license = LGPLv3

[options]
packages = find:
python_requires >=3.10
install_requires =
    yandex-music >=2.2.0
    mutagen >=1.47.0
    pyfuse3 >=3.4.0

[files]
packages =
    yandex_fuse

[options.entry_points]
console_scripts = 
    yamusic-fs = yandex_fuse.main:main 

[build-system]
requires = ["setuptools >= 68"]
