[metadata]
name = yandex-fuse
version = file:VERSION
summary = "Yandex Music Fuse FS"
description_file =
    README.md
author = Roman Nebaluev
license = LGPLv3

[options]
zip_safe = false
include_package_data = true
packages =
    yandex_fuse
python_requires >=3.10
install_requires =
    yandex-music >=2.2.0
    mutagen >=1.47.0
    pyfuse3 >=3.4.0

[options.package_data]
yandex_fuse = contrib/*

[options.entry_points]
console_scripts = 
    yamusic-fs = yandex_fuse.main:main 

[sdist]
formats = gztar

[build-system]
requires = ["setuptools >= 68"]
